New Language Compiler/Phase 1/gen/main/grammar/SophiaParser.java
// Generated from C:/Users/rasou/Desktop/Compiler/Project/Phase 1/src/main/grammar\Sophia.g4 by ANTLR 4.8
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SophiaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, MINMIN=2, PLUSPLUS=3, OROP=4, ANDOP=5, UNARYLOGIC=6, SUMOP=7, 
		COMPOP=8, MULTOP=9, CLS=10, IF=11, FALSE=12, LIST=13, EXT=14, ELSE=15, 
		TRUE=16, IN=17, THIS=18, FOR=19, INT=20, NULL=21, DEF=22, FORE=23, BOOL=24, 
		NEW=25, FUNC=26, CONT=27, STR=28, PRI=29, RET=30, BRK=31, VOID=32, ENDOFLINE=33, 
		DEFINIT=34, COMM=35, ASSIGN=36, DOT=37, LBRC=38, RBRC=39, LBRA=40, RBRA=41, 
		LPAR=42, RPAR=43, COUPLE=44, FUNCSIG=45, LST=46, GT=47, ID=48, NUM=49, 
		POSNUM=50, STRING=51, DIGIT=52, NOZERODIGIT=53, COMMENT=54, UPLETTER=55, 
		LOWLETTER=56, UNDERSCORE=57, ZERO=58, NXTLINE=59, WS=60;
	public static final int
		RULE_sophia = 0, RULE_main_class = 1, RULE_classes = 2, RULE_constructor = 3, 
		RULE_main_constructor = 4, RULE_main_class_scope = 5, RULE_class_scope = 6, 
		RULE_declarations = 7, RULE_func_declare = 8, RULE_func_input_vars = 9, 
		RULE_func_ret_type = 10, RULE_func_scope = 11, RULE_simple_scope = 12, 
		RULE_some_declarations = 13, RULE_some_statements = 14, RULE_statement = 15, 
		RULE_single_statement = 16, RULE_func_call = 17, RULE_func_args = 18, 
		RULE_assign_statement = 19, RULE_multiple_assign_statement = 20, RULE_foreachStatement = 21, 
		RULE_for_statement = 22, RULE_oneLine_statement = 23, RULE_if_statement = 24, 
		RULE_open_if_statement = 25, RULE_close_if_statement = 26, RULE_non_if_statement = 27, 
		RULE_expr = 28, RULE_bool_expr = 29, RULE_and_expr = 30, RULE_unary_rel_expr = 31, 
		RULE_rel_expr = 32, RULE_sum_expr = 33, RULE_mul_expr = 34, RULE_unary_expr = 35, 
		RULE_single_unit = 36, RULE_var_types = 37, RULE_list_type = 38, RULE_some_types = 39, 
		RULE_var_declare_statement = 40, RULE_var_declare = 41, RULE_var = 42, 
		RULE_variable = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"sophia", "main_class", "classes", "constructor", "main_constructor", 
			"main_class_scope", "class_scope", "declarations", "func_declare", "func_input_vars", 
			"func_ret_type", "func_scope", "simple_scope", "some_declarations", "some_statements", 
			"statement", "single_statement", "func_call", "func_args", "assign_statement", 
			"multiple_assign_statement", "foreachStatement", "for_statement", "oneLine_statement", 
			"if_statement", "open_if_statement", "close_if_statement", "non_if_statement", 
			"expr", "bool_expr", "and_expr", "unary_rel_expr", "rel_expr", "sum_expr", 
			"mul_expr", "unary_expr", "single_unit", "var_types", "list_type", "some_types", 
			"var_declare_statement", "var_declare", "var", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Main'", "'--'", "'++'", "'||'", "'&&'", "'!'", null, null, null, 
			"'class'", "'if'", "'false'", "'list'", "'extends'", "'else'", "'true'", 
			"'in'", "'this'", "'for'", "'int'", "'null'", "'def'", "'foreach'", "'bool'", 
			"'new'", "'func'", "'continue'", "'string'", "'print'", "'return'", "'break'", 
			"'void'", "';'", "':'", "','", "'='", "'.'", "'{'", "'}'", "'['", "']'", 
			"'('", "')'", "'#'", "'->'", "'>'", "'<'", null, null, null, null, null, 
			null, null, null, null, "'_'", "'0'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "MINMIN", "PLUSPLUS", "OROP", "ANDOP", "UNARYLOGIC", "SUMOP", 
			"COMPOP", "MULTOP", "CLS", "IF", "FALSE", "LIST", "EXT", "ELSE", "TRUE", 
			"IN", "THIS", "FOR", "INT", "NULL", "DEF", "FORE", "BOOL", "NEW", "FUNC", 
			"CONT", "STR", "PRI", "RET", "BRK", "VOID", "ENDOFLINE", "DEFINIT", "COMM", 
			"ASSIGN", "DOT", "LBRC", "RBRC", "LBRA", "RBRA", "LPAR", "RPAR", "COUPLE", 
			"FUNCSIG", "LST", "GT", "ID", "NUM", "POSNUM", "STRING", "DIGIT", "NOZERODIGIT", 
			"COMMENT", "UPLETTER", "LOWLETTER", "UNDERSCORE", "ZERO", "NXTLINE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sophia.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SophiaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SophiaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SophiaParser.EOF, 0); }
		public List<ClassesContext> classes() {
			return getRuleContexts(ClassesContext.class);
		}
		public ClassesContext classes(int i) {
			return getRuleContext(ClassesContext.class,i);
		}
		public Main_classContext main_class() {
			return getRuleContext(Main_classContext.class,0);
		}
		public SophiaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sophia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterSophia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitSophia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitSophia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SophiaContext sophia() throws RecognitionException {
		SophiaContext _localctx = new SophiaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sophia);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			classes();
			}
			{
			setState(89);
			main_class();
			}
			{
			setState(90);
			classes();
			}
			setState(91);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_classContext extends ParserRuleContext {
		public TerminalNode CLS() { return getToken(SophiaParser.CLS, 0); }
		public TerminalNode MAIN() { return getToken(SophiaParser.MAIN, 0); }
		public Main_class_scopeContext main_class_scope() {
			return getRuleContext(Main_class_scopeContext.class,0);
		}
		public Main_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterMain_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitMain_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitMain_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_classContext main_class() throws RecognitionException {
		Main_classContext _localctx = new Main_classContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(CLS);
			setState(94);
			match(MAIN);
			System.out.println("ClassDec:Main"); 
			setState(96);
			main_class_scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassesContext extends ParserRuleContext {
		public TerminalNode CLS() { return getToken(SophiaParser.CLS, 0); }
		public List<TerminalNode> ID() { return getTokens(SophiaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SophiaParser.ID, i);
		}
		public Class_scopeContext class_scope() {
			return getRuleContext(Class_scopeContext.class,0);
		}
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public TerminalNode EXT() { return getToken(SophiaParser.EXT, 0); }
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitClasses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitClasses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classes);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(98);
				match(CLS);
				System.out.print("ClassDec:"+getCurrentToken().getText()); 
				setState(100);
				match(ID);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXT) {
					{
					setState(101);
					match(EXT);
					System.out.print("," + getCurrentToken().getText());
					setState(103);
					match(ID);
					}
				}

				System.out.println();
				setState(107);
				class_scope();
				}
				{
				setState(109);
				classes();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(SophiaParser.DEF, 0); }
		public TerminalNode ID() { return getToken(SophiaParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(SophiaParser.LPAR, 0); }
		public Func_input_varsContext func_input_vars() {
			return getRuleContext(Func_input_varsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SophiaParser.RPAR, 0); }
		public Func_scopeContext func_scope() {
			return getRuleContext(Func_scopeContext.class,0);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constructor);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(DEF);
				System.out.println("ConstructorDec:"+getCurrentToken().getText());
				setState(116);
				match(ID);
				setState(117);
				match(LPAR);
				setState(118);
				func_input_vars();
				setState(119);
				match(RPAR);
				setState(120);
				func_scope();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_constructorContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(SophiaParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(SophiaParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(SophiaParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SophiaParser.RPAR, 0); }
		public Func_scopeContext func_scope() {
			return getRuleContext(Func_scopeContext.class,0);
		}
		public Main_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterMain_constructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitMain_constructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitMain_constructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_constructorContext main_constructor() throws RecognitionException {
		Main_constructorContext _localctx = new Main_constructorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main_constructor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(DEF);
			setState(126);
			match(MAIN);
			System.out.println("ConstructorDec:Main");
			setState(128);
			match(LPAR);
			setState(129);
			match(RPAR);
			setState(130);
			func_scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_class_scopeContext extends ParserRuleContext {
		public TerminalNode LBRC() { return getToken(SophiaParser.LBRC, 0); }
		public TerminalNode RBRC() { return getToken(SophiaParser.RBRC, 0); }
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public Main_constructorContext main_constructor() {
			return getRuleContext(Main_constructorContext.class,0);
		}
		public Main_class_scopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_class_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterMain_class_scope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitMain_class_scope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitMain_class_scope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_class_scopeContext main_class_scope() throws RecognitionException {
		Main_class_scopeContext _localctx = new Main_class_scopeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_main_class_scope);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(LBRC);
			{
			setState(133);
			declarations();
			}
			{
			setState(134);
			main_constructor();
			}
			{
			setState(135);
			declarations();
			}
			setState(136);
			match(RBRC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_scopeContext extends ParserRuleContext {
		public TerminalNode LBRC() { return getToken(SophiaParser.LBRC, 0); }
		public TerminalNode RBRC() { return getToken(SophiaParser.RBRC, 0); }
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public Class_scopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterClass_scope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitClass_scope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitClass_scope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_scopeContext class_scope() throws RecognitionException {
		Class_scopeContext _localctx = new Class_scopeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_scope);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(LBRC);
				{
				setState(139);
				declarations();
				}
				{
				setState(140);
				constructor();
				}
				{
				setState(141);
				declarations();
				}
				setState(142);
				match(RBRC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(LBRC);
				{
				setState(145);
				declarations();
				}
				setState(146);
				match(RBRC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Func_declareContext func_declare() {
			return getRuleContext(Func_declareContext.class,0);
		}
		public Var_declare_statementContext var_declare_statement() {
			return getRuleContext(Var_declare_statementContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarations);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEF:
					{
					setState(150);
					func_declare();
					}
					break;
				case ID:
					{
					setState(151);
					var_declare_statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				{
				setState(154);
				declarations();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declareContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(SophiaParser.DEF, 0); }
		public Func_ret_typeContext func_ret_type() {
			return getRuleContext(Func_ret_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SophiaParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(SophiaParser.LPAR, 0); }
		public Func_input_varsContext func_input_vars() {
			return getRuleContext(Func_input_varsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(SophiaParser.RPAR, 0); }
		public Func_scopeContext func_scope() {
			return getRuleContext(Func_scopeContext.class,0);
		}
		public Func_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterFunc_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitFunc_declare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitFunc_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declareContext func_declare() throws RecognitionException {
		Func_declareContext _localctx = new Func_declareContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_declare);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(DEF);
			setState(160);
			func_ret_type();
			System.out.println("MethodDec:"+getCurrentToken().getText());
			setState(162);
			match(ID);
			setState(163);
			match(LPAR);
			setState(164);
			func_input_vars();
			setState(165);
			match(RPAR);
			setState(166);
			func_scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_input_varsContext extends ParserRuleContext {
		public Var_declareContext var_declare() {
			return getRuleContext(Var_declareContext.class,0);
		}
		public TerminalNode COMM() { return getToken(SophiaParser.COMM, 0); }
		public Func_input_varsContext func_input_vars() {
			return getRuleContext(Func_input_varsContext.class,0);
		}
		public Func_input_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_input_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).enterFunc_input_vars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SophiaListener ) ((SophiaListener)listener).exitFunc_input_vars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SophiaVisitor ) return ((SophiaVisitor<? extends T>)visitor).visitFunc_input_vars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_input_varsContext func_input_vars() throws RecognitionException {
		Func_input_varsContext _localctx = new Func_input_varsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_func_input_vars);
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				var_declare();
				{
				setState(169);
				match(COMM);
				setState(170);
				func_input_vars();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				var_declare();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
